--- a/vignettes/codondiffr.Rmd
+++ b/vignettes/codondiffr.Rmd
@@ -171,7 +171,7 @@ includeTax <- c(
 exclCod <- c("TAA", "TAG", "TGA")
 
 PCA_dat <- PCA(
-    exclude = exclCod, rank = "phylum",
+    exclude = exclCod, rank = "Phylum",
     corCut = 1, minlen = 600, includeTax = includeTax
 )
 
